[package]
name = "christmas-snow"
version = "1.0.0"
edition = "2021"
description = "High-performance snow and particle effects for Christmas Tree using WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "Performance",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
